--- a/pro-sc/prometheus/rules.yml
+++ b/pro-sc/prometheus/rules.yml
@@ -198,8 +198,22 @@ groups:
 - name: record_rules
   rules:
   - expr: |
-      avg(label_replace(container_memory_rss{namespace="devops", container=~"nameko-.*"}, "nameko_app_name", "$1", "container", "(nameko-[a-z]+)")) by (nameko_app_name)
-    record: nameko_app:cpu_rss
+      avg(
+          label_replace(
+            container_memory_rss{
+              container_label_io_kubernetes_pod_namespace!="kube-system",
+              container_label_io_kubernetes_pod_name=~"^(prometheus.*|xxx.*)$"
+            },
+            "relabeld_name", "$1", "container_label_io_cri_containerd_kind", "(.*)"
+          )
+        ) by (relabeld_name)
+    record: nk_app:cpu_rss
   - expr: |
-      sum(label_replace(rate(container_network_receive_bytes_total{namespace="devops",pod=~"nameko-.*"}[5m]), "nameko_app_name", "$1", "pod", "(nameko-[a-z]+)-.*")) by (nameko_app_name)
-    record: nameko_app:receive_speed
+      sum by (nk_pod_name) (
+        label_replace(
+          rate(container_network_receive_bytes_total{container_label_io_kubernetes_pod_name=~".+", container_label_io_kubernetes_pod_name!=""}[5m]),
+          "nk_pod_name", "$1", "container_label_io_kubernetes_pod_name", "(.*)"
+        )
+      )
+
+    record: nk_pod:receive_speed
